status bar and navigation bar phinmaGreen. fixed the navigation_view. not overlapping with statusbar anymore.

--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/offwhite"
-    android:fitsSystemWindows="true" >
+    android:fitsSystemWindows="false" >
 
     <RelativeLayout
         android:layout_width="match_parent"
