--- a/app/src/main/res/layout/activity_modalities.xml
+++ b/app/src/main/res/layout/activity_modalities.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E4E3DF"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false">
 
     <RelativeLayout
         android:layout_width="match_parent"
