--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -160,7 +160,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_border"
                     android:hint="Enter your student number"
-                    android:inputType="number"
+                    android:inputType="number|text"
+                    android:digits="03-1617-23456789"
                     android:padding="12dp"
                     android:textColor="@color/black"
                     android:textColorHint="#494949"
