--- a/app/src/main/res/layout/activity_sch_page2_list_item.xml
+++ b/app/src/main/res/layout/activity_sch_page2_list_item.xml
@@ -8,55 +8,38 @@
     android:paddingTop="5dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#FFD000"
+        android:id="@+id/card_scholarship"
+        android:layout_width="match_parent"
+        android:layout_height="102dp"
+        android:backgroundTint="@color/phinmaGreen"
         android:clickable="false"
         android:focusable="true"
-        app:cardCornerRadius="50dp"
+        app:cardCornerRadius="24dp"
         app:cardElevation="5dp"
-        app:contentPaddingTop="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="351dp"
-            android:layout_height="160dp"
-            android:layout_marginStart="5dp"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_scholarshipTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/phinmaGreen"
+            android:drawableEnd="@drawable/sch_ic_rightarrow"
+            android:drawablePadding="8dp"
+            android:drawableTint="@color/white"
+            android:fontFamily="@font/josefin_sans_bold"
+            android:gravity="center_horizontal|center_vertical"
+            android:padding="16dp"
+            android:text="PHINMA SCHOLARSHIP"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText,TextSizeCheck" />
 
-            <TextView
-                android:id="@+id/tv_scholarshipTitle"
-                android:layout_width="278dp"
-                android:layout_height="148dp"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/sch_custom_bg_list_green"
-                android:clickable="false"
-                android:gravity="center"
-                android:text="PHINMA SCHOLARSHIP"
-                android:fontFamily="@font/josefin_sans_bold"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                tools:ignore="HardcodedText,TextSizeCheck" />
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@android:color/transparent"
-                app:srcCompat="@drawable/sch_ic_rightarrow"
-                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
