--- a/app/src/main/res/layout/activity_scholarship_page1.xml
+++ b/app/src/main/res/layout/activity_scholarship_page1.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/offwhite"
+    android:fitsSystemWindows="false"
     tools:context=".scholarships.ScholarshipPage1">
 
     <RelativeLayout
@@ -20,87 +19,87 @@
             android:layout_height="wrap_content"
             android:background="@color/phinmaGreen"
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
+            app:menu="@menu/top_app_bar_menu"
             app:navigationIcon="@drawable/ic_menu"
             app:navigationIconTint="@android:color/white"
             app:title="Scholarships"
-            app:titleTextColor="@color/phinmaYellow"
-            app:menu="@menu/top_app_bar_menu" />
+            app:titleTextColor="@color/phinmaYellow" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@id/bottomNavigationView"
             android:layout_below="@id/topAppBar"
-            android:layout_above="@id/bottomNavigationView">
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="148dp"
+                    android:contentDescription="@string/scholarship_banner"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/scholarship_banner" />
 
                 <LinearLayout
-                    android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="543dp"
-                    android:background="@drawable/sch_custom_bg_page1"
-                    android:gravity="center"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingTop="5dp">
-
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="89dp"
-                        android:layout_height="111dp"
-                        android:layout_gravity="center"
-                        app:srcCompat="@drawable/sch_phinmalogo"
-                        tools:ignore="ContentDescription" />
+                    android:padding="16dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="16dp"
                         android:fontFamily="@font/josefin_sans_bold"
+                        android:gravity="center"
                         android:text="@string/scholarships_title"
-                        android:textColor="@color/white"
-                        android:textSize="36sp" />
+                        android:textColor="@color/phinmaGreen"
+                        android:textSize="28sp" />
 
                     <TextView
-                        android:layout_width="355dp"
-                        android:layout_height="256dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="24dp"
                         android:fontFamily="@font/montserrat_bold"
                         android:gravity="center"
+                        android:lineSpacingExtra="4dp"
                         android:text="@string/scholarship_description"
-                        android:textColor="@color/white"
-                        android:textSize="15sp"
-                        tools:ignore="TextSizeCheck" />
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="287dp"
-                        android:layout_height="100dp"
-                        app:srcCompat="@drawable/sch_hands"
-                        tools:ignore="ContentDescription" />
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="16dp"
+                        android:background="?android:attr/listDivider" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="@font/josefin_sans_bold"
+                        android:gravity="center"
+                        android:text="@string/sch_descriptionScholarshipsList"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+                    <ImageButton
+                        android:id="@+id/btn_scholarship_lists"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:contentDescription="@string/next"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/arrow_right2" />
+
                 </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans_bold"
-                    android:gravity="center"
-                    android:text="@string/sch_descriptionScholarshipsList"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    tools:ignore="TextSizeCheck" />
-
-                <ImageButton
-                    android:id="@+id/btn_scholarship_lists"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="#00FFFFFF"
-                    android:contentDescription="button for lists of scholarships"
-                    android:src="@drawable/arrow_right2"
-                    tools:ignore="HardcodedText" />
-
             </LinearLayout>
         </ScrollView>
 
@@ -109,8 +108,8 @@
             style="@style/BottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
-
+            android:layout_alignParentBottom="true"
+            android:background="@color/phinmaGreen" />
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -119,5 +118,4 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start" />
-
 </androidx.drawerlayout.widget.DrawerLayout>
