--- a/app/src/main/res/layout/activity_scholarship_page2.xml
+++ b/app/src/main/res/layout/activity_scholarship_page2.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#141C2C" android:fitsSystemWindows="true"
+    android:fitsSystemWindows="true"
     tools:context=".scholarships.ScholarshipPage2">
 
     <RelativeLayout
@@ -19,21 +18,22 @@
             android:layout_height="wrap_content"
             android:background="@color/phinmaGreen"
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
+            app:menu="@menu/top_app_bar_menu"
             app:navigationIcon="@drawable/ic_menu"
             app:navigationIconTint="@android:color/white"
             app:title="Scholarships"
-            app:titleTextColor="@color/phinmaYellow"
-            app:menu="@menu/top_app_bar_menu" />
+            app:titleTextColor="@color/phinmaYellow" />
 
         <!-- RecyclerView for Content -->
         <!--  Did some layout magic (aka using constrainedHeight)  -->
         <androidx.recyclerview.widget.RecyclerView
+            android:contentDescription="@string/recyclerview"
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constrainedHeight="true"
+            android:layout_above="@id/bottomNavigationView"
             android:layout_below="@id/topAppBar"
-            android:layout_above="@id/bottomNavigationView" />
+            app:layout_constrainedHeight="true" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
