--- a/app/src/main/res/layout/activity_modalities_list_urdaneta_flex24.xml
+++ b/app/src/main/res/layout/activity_modalities_list_urdaneta_flex24.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/offwhite"
+    android:background="#E4E3DF"
     android:fitsSystemWindows="false">
 
     <RelativeLayout
@@ -20,21 +20,23 @@
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
             app:navigationIcon="@drawable/ic_menu"
             app:navigationIconTint="@android:color/white"
+            app:title="Modalities"
             app:titleTextColor="@color/phinmaYellow"
             app:menu="@menu/top_app_bar_menu" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
-            android:background="@drawable/gray_bg"
             android:layout_below="@id/topAppBar"
-            android:layout_above="@id/bottomNavigationView">
+            android:layout_above="@id/bottomNavigationView"
+            android:fillViewport="true"
+            android:background="@drawable/gray_bg">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -43,65 +45,102 @@
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/josefin_sans_bold"
                     android:gravity="center"
-                    android:text="REMOTE COURSES"
+                    android:text="URDANETA CAMPUS"
                     android:textColor="@color/phinmaGreen"
                     android:textSize="28sp" />
 
                 <Button
                     android:fontFamily="@font/josefin_sans_bold"
-                    android:id="@+id/button_management_Acc"
+                    android:id="@+id/button_allied_health"
                     android:layout_width="match_parent"
                     android:layout_height="102dp"
                     android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
                     android:drawableEnd="@drawable/sch_ic_rightarrow"
-                    android:drawableTint="#FFFFFF"
+                    android:drawableTint="@android:color/white"
+                    android:padding="16dp"
+                    android:text="College of Allied Health Sciences"
+                    android:textSize="16sp"
+                    android:elevation="6dp"
+                    app:cornerRadius="16dp" />
+
+                <Button
+                    android:fontFamily="@font/josefin_sans_bold"
+                    android:id="@+id/button_management"
+                    android:layout_width="match_parent"
+                    android:layout_height="102dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
+                    android:drawableEnd="@drawable/sch_ic_rightarrow"
+                    android:drawableTint="@android:color/white"
                     android:padding="16dp"
                     android:text="College of Management and Accountancy"
                     android:textSize="16sp"
+                    android:elevation="6dp"
                     app:cornerRadius="16dp" />
 
                 <Button
                     android:fontFamily="@font/josefin_sans_bold"
-                    android:id="@+id/button_bs_crim"
+                    android:id="@+id/button_criminal"
                     android:layout_width="match_parent"
                     android:layout_height="102dp"
                     android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
                     android:drawableEnd="@drawable/sch_ic_rightarrow"
-                    android:drawableTint="#FFFFFF"
+                    android:drawableTint="@android:color/white"
                     android:padding="16dp"
                     android:text="College of Criminal Justice Education"
                     android:textSize="16sp"
+                    android:elevation="6dp"
                     app:cornerRadius="16dp" />
 
                 <Button
                     android:fontFamily="@font/josefin_sans_bold"
-                    android:id="@+id/button_bs_it"
+                    android:id="@+id/button_engineering"
                     android:layout_width="match_parent"
                     android:layout_height="102dp"
                     android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
                     android:drawableEnd="@drawable/sch_ic_rightarrow"
-                    android:drawableTint="#FFFFFF"
+                    android:drawableTint="@android:color/white"
                     android:padding="16dp"
-                    android:text="College of Information Technology"
+                    android:text="College of Engineering and Architecture"
                     android:textSize="16sp"
+                    android:elevation="6dp"
                     app:cornerRadius="16dp" />
 
                 <Button
                     android:fontFamily="@font/josefin_sans_bold"
-                    android:id="@+id/button_bs_educ_liberal_arts"
+                    android:id="@+id/button_science"
                     android:layout_width="match_parent"
                     android:layout_height="102dp"
                     android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
                     android:drawableEnd="@drawable/sch_ic_rightarrow"
-                    android:drawableTint="#FFFFFF"
+                    android:drawableTint="@android:color/white"
                     android:padding="16dp"
-                    android:text="College of Education and Liberal Arts"
+                    android:text="Bachelor of Science in Computer Science"
                     android:textSize="16sp"
+                    android:elevation="6dp"
+                    app:cornerRadius="16dp" />
+
+                <Button
+                    android:fontFamily="@font/josefin_sans_bold"
+                    android:id="@+id/button_english"
+                    android:layout_width="match_parent"
+                    android:layout_height="102dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
+                    android:drawableEnd="@drawable/sch_ic_rightarrow"
+                    android:drawableTint="@android:color/white"
+                    android:padding="16dp"
+                    android:text="Bachelor of Arts in English Language"
+                    android:textSize="16sp"
+                    android:elevation="6dp"
                     app:cornerRadius="16dp" />
 
             </LinearLayout>
         </ScrollView>
-
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
