--- a/app/src/main/res/layout/activity_sch_page2_list_item.xml
+++ b/app/src/main/res/layout/activity_sch_page2_list_item.xml
@@ -20,6 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        android:elevation="6dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
